# auto_download_favlist

./: .gitignore  Agents.md  CHANGELOG.md  Cargo.toml  readme.md  requirements.txt
ai-agent-memory/: AI-AGENT_criterion.md  AI-AGENT_step-before.md  bbdown.config  now-task.md  undetermined-template.md
ai-agent-memory/criterion-python/: README.md  规范守则_CLI与自动化脚本.md  规范守则_Web与微服务.md  规范守则_企业级平台与服务.md  规范守则_数据科学与机器学习.md  规范守则_高性能与分布式计算.md
ai-agent-memory/criterion-rust/: 规范守则_CLI应用模板.md  规范守则_Web服务模板.md  规范守则_库项目模板.md  规范守则_跨平台项目模板.md  规范守则_高性能系统项目模板.md
ai-agent-output/2025-11-02T11-38-29_UTC+8_B站收藏抓取脚本/: AI-AGENT_working-status.csv  flow-design.md  optimized-task.md  undetermined.md
ai-agent-output/2025-11-02T17-57-10_UTC+8_收藏夹助手增强版/: AI-AGENT_working-status.csv  flow-design.md  optimized-task.md  undetermined.md
ai-agent-output/2025-11-02T19-54-16_UTC+8_Rust收藏工具重构/: AI-AGENT_working-status.csv  flow-design.md  optimized-task.md  undetermined.md
ai-agent-output/2025-11-03T20-52-51_UTC+8_收藏流程功能强化/: AI-AGENT_working-status.csv  flow-design.md  optimized-task.md  undetermined.md
ai-agent-output/2025-11-04T20-26-24_UTC+8_进度缺漏修复/: AI-AGENT_working-status.csv  flow-design.md  optimized-task.md  undetermined.md
ai-agent-output/2025-11-06T16-26-59_UTC+8_BBDown并发控制/: AI-AGENT_working-status.csv  optimized-task.md  undetermined.md
crates/bilibili_favlist_download_helper/: Cargo.toml
crates/bilibili_favlist_download_helper/src/: bbdown.rs  config.rs  main.rs  menu.rs  prompts.rs
crates/favlist_core/: Cargo.toml
crates/favlist_core/src/: client.rs  csv_utils.rs  errors.rs  export.rs  inventory.rs  lib.rs  models.rs  timestamp.rs
crates/favlist_core/tests/: core_tests.rs
crates/get_bilibili_favlist_bvid_list/: Cargo.toml
docs/: windows-deployment.md
output/: favlist.csv
program_flowchart/src/: core_export_progress.txt  fav_export.txt  helper_bbdown_api.txt  helper_main.txt  rust_fav_export.txt  rust_helper_config.txt  rust_helper_main.txt
py-src/auto_download_favlist/: __init__.py  cli.py  (+2 more)
tests/: conftest.py  test_cli.py  test_csv_writer.py  test_helper_bv_tools.py  test_helper_config_store.py  test_helper_export_service.py  test_utils.py
(+12 files in other folders)
