[package]
name = "bilibili_favlist_download_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
favlist_core = { path = "../favlist_core" }
indicatif = "0.17"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
