[package]
name = "bilibili_favlist_download_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
favlist_core = { path = "../favlist_core" }
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
