[package]
name = "bilibili_favlist_download_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
crossterm = "0.27"
dirs-next = "2.0"
favlist_core = { path = "../favlist_core" }
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
