[package]
name = "favlist_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
csv = "1.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
lazy_static = "1.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5"
regex = "1.11"
walkdir = "2.5"
log = "0.4"
parking_lot = "0.12"

[dev-dependencies]
httpmock = "0.7"
serde_json = "1.0"
tempfile = "3.12"
assert_matches = "1.5"
